tooling/nargo_cli/tests/snapshots/execution_success/regression_9329/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut b: [i8; 2]) -> pub i8 {
    b[{
        let d: i8 = 1_i8;
        for _ in 0_u32..2_u32 {
            b[0_u32] = b[1_u32] + d;
        }
        0_u32
    }]
}
