tooling/nargo_cli/tests/snapshots/execution_success/regression_9329/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [i8; 2]):
    (no terminator instruction)
}
[regression_9329] Circuit output: 21
